# Paint-Windows-API

./: BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  Circle.cpp  Circle.h  Clipping.cpp  Clipping.h  EndpointsBuffer.cpp  EndpointsBuffer.h  File.cpp  File.h  Filling.cpp  Filling.h  HermiteCurve.cpp  HermiteCurve.h  Line.cpp  Line.h  MyMenu.h  MyPoint.cpp  MyPoint.h  Poly.cpp  Poly.h  README.md  Shape.cpp  Shape.h  ShapeBuffer.cpp  ShapeBuffer.h  c.txt  d.txt  e.txt  main.cpp
